--- a/website/src/pages/tutorial/basic/05-a-simple-mutation.mdx
+++ b/website/src/pages/tutorial/basic/05-a-simple-mutation.mdx
@@ -1,14 +1,11 @@
----
-id: 05-a-simple-mutation
-title: A simple Mutation
-sidebar_label: A simple Mutation
-type: Tutorial
----
+import { Callout, Instruction, PackageCmd } from '@theguild/components'
+
+# A Simple Mutation
 
 In this section, you'll learn how to add a `Mutation` field to the GraphQL schema. This mutation field will allow you to _post_ new links
 to the server.
 
-### Extending the schema definition
+## Extending the Schema Definition
 
 Like before, you need to start by adding the new operation to your GraphQL schema definition.
 
@@ -16,7 +13,7 @@ Like before, you need to start by adding the new operation to your GraphQL schem
 
 In `src/schema.ts`, extend the schema definition as follows:
 
-```ts
+```ts filename="schema.ts"
 const typeDefinitions = /* GraphQL */ `
   type Query {
     info: String!
@@ -37,7 +34,7 @@ const typeDefinitions = /* GraphQL */ `
 
 </Instruction>
 
-### Implementing the resolver function
+## Implementing the Resolver Function
 
 The next step in the process of adding a new feature to the API is to implement the resolver function for the new field.
 
@@ -94,17 +91,18 @@ Also, here's what's going on with the numbered comments:
 
 1. You're adding a new integer variable that simply serves as a very rudimentary way to generate unique IDs for newly
    created `Link` elements.
-1. The implementation of the `postLink` resolver on the `Mutation` object type first creates a new `link` object, then adds it to the existing `links`
+2. The implementation of the `postLink` resolver on the `Mutation` object type first creates a new `link` object, then adds it to the existing `links`
    array and finally returns the new `link`.
 
-Now's a good time to discuss the second argument that's passed into all resolver functions: `args`. Any guesses what
-it's used for?
+Now's a good time to discuss the second argument that's passed into all resolver functions: `args`. Any guesses what it's used for?
 
-Correct! 💡 It carries the _arguments_ for the field that are sent – in this case the `url` and `description` of the `Link` to be
-created. We didn't need it for the `feed` and `info` resolvers before, because these `Query` object type fields don't
-specify any arguments in the schema definition.
+<Callout title="info">Correct!</Callout>
+It carries the _arguments_ for the field that is sent – in this case, the `url` and
+`description` of the `Link` to be created. We didn't need it for the `feed` and `info`
+resolvers before, because these `Query` object type fields don't specify any arguments
+in the schema definition.
 
-### Testing the mutation
+## Testing the Mutation
 
 Go ahead and restart your server so you can test the new API operations. Here is a sample mutation you can send through GraphiQL:
 
@@ -121,7 +119,7 @@ mutation {
 
 The server response will look as follows:
 
-```json(nocopy)
+```json
 {
   "data": {
     "postLink": {
@@ -136,12 +134,13 @@ The server response will look as follows:
 With every mutation you send, the `idCount` will increase and the following IDs for created links will be `link-2`,
 `link-3`, and so forth...
 
-To verify that your mutation worked, you can send the `feed` query operation from before again – it now returns the additional
-Link that you created with the mutation:
+To verify that your mutation worked, you can send the `feed` query operation from before again – it now returns the additional.
+
+The link that you created with the mutation:
 
 [![returns the additional Link](/assets/tutorial/basic/05-a-simple-mutation/feed-link-query-response.png)](/assets/tutorial/basic/05-a-simple-mutation/feed-link-query-response.png)
 
 However, once you kill and restart the server, you'll notice that the previously added links are now gone and you need
 to add them again. This is because the links are only stored _in-memory_, in the `links` array. In the next sections,
-you will learn how to add a _database_ to the GraphQL server in order to persist the data beyond the runtime of the
+you will learn how to add a _database_ to the GraphQL server to persist the data beyond the runtime of the
 server.
