--- a/website/src/pages/tutorial/basic/09-error-handling.mdx
+++ b/website/src/pages/tutorial/basic/09-error-handling.mdx
@@ -1,16 +1,13 @@
----
-id: 09-error-handling
-title: Error Handling
-sidebar_label: Error Handling
-type: Tutorial
----
+import { Instruction } from '@theguild/components'
 
-In the previous chapter you encountered an error while executing a `Mutation.postCommentOnLink` operation.
-In this chapter you will learn the origin of this error and learn how to properly handle it.
+# Error Handling
 
-### Recap of the encountered error
+In the previous chapter, you encountered an error while executing a `Mutation.postCommentOnLink` operation.
+In this chapter, you will learn the origin of this error and learn how to properly handle it.
 
-This is the resolver implementation that caused the issue when using a `linkId` that has no counter-part within the database.
+## Recap of The Encountered Error
+
+This is the resolver implementation that caused the issue when using a `linkId` that has no counterpart within the database.
 
 ```ts
 const resolvers = {
@@ -50,7 +47,7 @@ mutation postCommentOnLink {
 
 </Instruction>
 
-Again, this should yield in the following error response:
+Again, this should yield the following error response:
 
 ```json
 {
@@ -77,13 +74,13 @@ Again, this should yield in the following error response:
 ```
 
 As you can see the error includes an `extensions` `originalError` field.
-It includes a full stack-trace of the original error for finding the cause easily.
+It includes a full stack trace of the original error for finding the cause easily.
 
 ## Yoga Error Masking
 
-In a production environment, a stack-trace that leaks to the outside world is a potential security threat as that information could be misused by malicious actors.
+In a production environment, a stack trace that leaks to the outside world are a potential security threat as that information could be misused by malicious actors.
 
-The `extensions` `originalError` field is only present within on an error if the server has been started with the `NODE_ENV` environment variable being set to `development`.
+The `extensions` `originalError` field is only present within an error if the server has been started with the `NODE_ENV` environment variable being set to `development`.
 
 As you might remember this is only the case when you are starting the server using `npm run dev`.
 
@@ -108,7 +105,7 @@ mutation postCommentOnLink {
 
 </Instruction>
 
-Now you can see that there is no `originalError` within the errors array first object.
+Now you can see that there is no `originalError` within the errors array of the first object.
 
 ```json
 {
@@ -130,7 +127,7 @@ Now you can see that there is no `originalError` within the errors array first o
 
 This is great, but now we never know why our request failed 🤔and the error message `Unexpected error.` is also not helpful to anyone not aware of the exact resolver function implementation.
 
-## Exposing safe error messages
+## Exposing Safe Error Messages
 
 Let's change the implementation to expose the much more helpful message `Cannot post comment on non-existing link with id 'X'.` instead of `Unexpected error.`.
 
@@ -140,7 +137,7 @@ For doing so you will use the `GraphQLYogaError` class that is exported from the
 
 Add the following catch handler for mapping a foreign key error into a `GraphQLYogaError`.
 
-```typescript
+```ts
 // ... other imports ...
 import { GraphQLYogaError } from '@graphql-yoga/node'
 // ... other imports ...
@@ -183,8 +180,8 @@ const resolvers = {
 
 </Instruction>
 
-The error code `P2003` indicates a foreign key constraint error. [You can learn more about it in the prisma documentation](https://www.prisma.io/docs/reference/api-reference/error-reference#p2003).
-You use that code for identifying this edge case of a missing link and then throw a `GraphQLYogaError` with an useful error message instead.
+The error code `P2003` indicates a foreign key constraint error. [You can learn more about it in the Prisma documentation](https://www.prisma.io/docs/reference/api-reference/error-reference#p2003).
+You use that code for identifying this edge case of a missing link and then throw a `GraphQLYogaError` with a useful error message instead.
 
 <Instruction>
 
@@ -201,7 +198,7 @@ mutation postCommentOnLink {
 
 </Instruction>
 
-You will receive a response with the `Cannot post comment on non-existing link with id '99999999999'.` message.
+You will receive a response with the `Cannot post a comment on the non-existing link with id '99999999999'.` message.
 
 ```json
 {
@@ -223,15 +220,15 @@ You will receive a response with the `Cannot post comment on non-existing link w
 
 As you might have noticed, GraphQLYoga will exclude `GraphQLYogaError` errors thrown within the resolvers from masking the error masking.
 
-That means every time you want to expose an error to the outside world you should throw an `GraphQLYogaError` error.
+That means every time you want to expose an error to the outside world you should throw a `GraphQLYogaError` error.
 
-At the same time any other unexpected error will automatically be masked from the outside world, bringing you sensible and safe defaults for a GraphQL Yoga production deployment!
+At the same time, any other unexpected error will automatically be masked from the outside world, bringing you sensible and safe defaults for a GraphQL Yoga production deployment!
 
-### Field Argument sanitizing
+## Field Argument Sanitizing
 
-There is actually one more issue within The `Mutation.postCommentOnLink` field resolver.
+There is one more issue within The `Mutation.postCommentOnLink` field resolver.
 
-So far you only executed the mutation operation while using an string encoded integer value for the `linkId` argument.
+So far you only executed the mutation operation while using a string encoded integer value for the `linkId` argument.
 
 <Instruction>
 
@@ -268,7 +265,7 @@ All seems good, right?
 }
 ```
 
-Let's also try another non integer string value.
+Let's also try another non-integer string value.
 
 <Instruction>
 
@@ -325,19 +322,19 @@ linkId: NaN
 
 These are the three parts within the error message that should make it click.
 
-It seems like the `linkId` passed to the prisma `create` function is `NaN`, which is a special value for "not a number" in JavaScript. The underlying database, however, expects a `integer` value. The error is raised and thrown, as you did not add logic for handling this edge case, yet.
+It seems like the `linkId` passed to the prisma `create` function is `NaN`, which is a special value for "not a number" in JavaScript. The underlying database, however, expects an `integer` value. The error is raised and thrown, as you did not add logic for handling this edge case, yet.
 
 But why did the previous value `"11a"`, not result in such an error?
 
-In order to clarify that question we need to have a small excursion on how the [`parseInt`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/parseInt) function works.
+To clarify that question we need to have a small excursion on how the [`parseInt`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/parseInt) function works.
 
-Basically, there are multiple mathematical numeral systems. The implementation tries to be a bit smart and fault-tolerant. So, instead let's build a quick custom function, `parseIntSafe`, that first validates the string contents using a regex.
+There are multiple mathematical numeral systems. The implementation tries to be a bit smart and fault-tolerant. So, let's build a quick custom function, `parseIntSafe`, that first validates the string contents using a regex.
 
 <Instruction>
 
 Add the following code to the `src/schema.ts` file.
 
-```typescript
+```ts filename="src/schema.ts"
 // ... other code ...
 
 const parseIntSafe = (value: string): number | null => {
@@ -392,7 +389,7 @@ const resolvers = {
 
 </Instruction>
 
-The regex `/^(\d+)$/` simply verifies that every character within the `value` is a digit. In case the value includes a non digit character, you simply return `null` and then reject the resolver with a `GraphQLYogaError` error.
+The regex `/^(\d+)$/` simply verifies that every character within the `value` is a digit. In case the value includes a non-digit character, you simply return `null` and then reject the resolver with a `GraphQLYogaError` error.
 
 Returning `null` instead of returning `NaN` is the better choice here, as it allows nice TypeScript checks (`linkId === null`).
 
@@ -411,13 +408,13 @@ mutation postCommentOnLink {
 
 </Instruction>
 
-All good now. 🎉
+All is good now. 🎉
 
 ```json
 {
   "errors": [
     {
-      "message": "Cannot post comment on non-existing link with id 'uuuuuu'.",
+      "message": "Cannot post a comment on the non-existing link with id 'uuuuuu'.",
       "locations": [
         {
           "line": 2,
@@ -433,6 +430,6 @@ All good now. 🎉
 
 Remember, when implementing your GraphQL resolver functions, the input arguments should always be sanitized and validated!
 
-### Optional Exercise
+## Optional Exercise
 
 As an optional exercise for interiorizing the knowledge, you can now also implement validation of the `body` argument of `Mutation.postCommentOnLink` and argument sanitization for the `Mutation.postLink` field. You wouldn't want anyone to post an empty comment or invalid link, right?
