--- a/website/src/pages/tutorial/basic/10-filtering-and-pagination.mdx
+++ b/website/src/pages/tutorial/basic/10-filtering-and-pagination.mdx
@@ -1,9 +1,6 @@
----
-id: 10-filtering-and-pagination
-title: Filtering and Pagination
-sidebar_label: Filtering and Pagination
-type: Tutorial
----
+import { Instruction, Callout } from '@theguild/components'
+
+# Filtering and Pagination
 
 This is an exciting section of the tutorial where you'll implement some key features of many robust APIs! The goal is to
 allow clients to constrain the list of `Link` elements returned by the `Query.feed` field by providing filtering and
@@ -11,10 +8,10 @@ pagination parameters.
 
 Let's jump in! 🚀
 
-### Filtering
+## Filtering
 
 By using `PrismaClient`, you'll be able to implement filtering capabilities to your API without too much effort.
-Similarly to the previous chapters, the heavy-lifting of query resolution will be performed by Prisma. All you need to
+Similar to the previous chapters, the heavy-lifting of query resolution will be performed by Prisma. All you need to
 do is pass the correct parameters within the field resolver functions.
 
 The first step is to think about the filters you want to expose through your API. In your case, the `Query.feed` field in your
@@ -23,9 +20,9 @@ API will accept a _filter string_. The query then should only return the `Link` 
 
 <Instruction>
 
-Go ahead and add the `filter` argument definition of the type `String` to the `Query.feed` field definition within in your application schema (under `src/schema.ts`):
+Go ahead and add the `filter` argument definition of the type `String` to the `Query.feed` field definition within your application schema (under `src/schema.ts`):
 
-```graphql
+```graphql filename="schema.ts"
 type Query {
   info: String!
   feed(filterNeedle: String): [Link!]!
@@ -91,26 +88,28 @@ query {
 
 ![sample query](https://i.imgur.com/tICYe2e.png)
 
-### Pagination
+## Pagination
 
-Pagination is a tricky topic in API design. On a high-level, there are two major approaches for tackling it:
+Pagination is a tricky topic in API design. On a high level, there are two major approaches for tackling it:
 
 - **Limit-Offset**: Request a specific _chunk_ of the list by providing the indices of the items to be retrieved (in
   fact, you're mostly providing the start index (_offset_) as well as a count of items to be retrieved (_limit_)).
-- **Cursor-based**: This pagination model is a bit more advanced. Every element in the list is associated with a unique
+- **Cursor-Based**: This pagination model is a bit more advanced. Every element in the list is associated with a unique
   ID (the _cursor_). Clients paginating through the list then provide the cursor of the starting element as well as a
   count of items to be retrieved.
 
 Prisma supports both pagination approaches (read more in the
 [docs](https://www.prisma.io/docs/reference/tools-and-interfaces/prisma-client/pagination)). In this tutorial, you're going to implement limit-offset pagination.
 
-> **Note**: You can read more about the ideas behind both pagination approaches
-> [here](https://dev-blog.apollodata.com/understanding-pagination-rest-graphql-and-relay-b10f835549e7).
+<Callout type="info">
+  **Note**: You can read more about the ideas behind both pagination approaches
+  [here](https://dev-blog.apollodata.com/understanding-pagination-rest-graphql-and-relay-b10f835549e7).
+</Callout>
 
 Limit and offset have different names in the Prisma API:
 
 - The _limit_ is called `take`, meaning you're "taking" `x` elements after a provided start index.
-- The _start index_ is called `skip`, since you're skipping that many elements in the list before collecting the items to be returned. If `skip` is not provided, it's `0` by default. The pagination then always starts from the beginning of the list.
+- The _start index_ is called `skip` since you're skipping that many elements in the list before collecting the items to be returned. If `skip` is not provided, it's `0` by default. The pagination then always starts from the beginning of the list.
 
 So, go ahead and add the `skip` and `take` arguments to the `Query.field` field definition.
 
@@ -165,7 +164,7 @@ const resolvers = {
 
 </Instruction>
 
-Really all that's changing here is that the invocation of the `links` query now receives two additional arguments which might be carried by the incoming `args` object. Again, Prisma will take care of the rest.
+All that's changing here is that the invocation of the `links` query now receives two additional arguments which might be carried by the incoming `args` object. Again, Prisma will take care of the rest.
 
 You can test the pagination API with the following query operation which returns the second `Link` from the list:
 
@@ -181,15 +180,15 @@ query {
 
 ![test the pagination API ](https://i.imgur.com/XeZgSJo.png)
 
-### Pagination field argument sanitization
+## Pagination Field Argument Sanitization
 
-In the last chapter you already sanitized the arguments within the `Mutation.postCommentOnLink` field resolver function.
+In the last chapter, you already sanitized the arguments within the `Mutation.postCommentOnLink` field resolver function.
 
 Up next, let's also take into consideration that the `Query.feed` arguments should also have some sanitizing.
 
-As more links are posted onto the feed, the size of the feed increases. At some point there could be thousands of feed items. When deploying the the GraphQL API to production you would not want to allow querying ALL the links at once. That means you have to introduce a default value for the `take` argument.
+As more links are posted onto the feed, the size of the feed increases. At some point, there could be thousands of feed items. When deploying the GraphQL API to production you would not want to allow querying ALL the links at once. That means you have to introduce a default value for the `take` argument.
 
-Furthermore, you should limit the `take` argument to be within a range that makes sense for the feed. The original hackernews shows 30 links per page.
+Furthermore, you should limit the `take` argument to be within a range that makes sense for the feed. The original hacker news shows 30 links per page.
 
 Let's use the value 30 as the default value and 50 as the upper limit and 1 as the lower limit. Fetching 0 records does not make sense.
 
@@ -249,7 +248,7 @@ const resolvers = {
 
 </Instruction>
 
-Cool! Now we you can try executing a operation with a `take` argument value outside the range!
+Cool! Now we can try executing an operation with a `take` argument value outside the range!
 
 <Instruction>
 
@@ -287,6 +286,6 @@ As expected, you receive an error:
 }
 ```
 
-### Optional Exercise
+## Optional Exercise
 
 As an optional exercise for interiorizing the knowledge, you can now also implement validation of the `skip` argument of `Query.feed` field and prohibit using negative numbers.
